--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
-  - type: worker
-    name: telegram-bot
+  - type: web
+    name: telegram-bot-web
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: gunicorn app:app --workers=1 --threads=2 --timeout=120 --bind 0.0.0.0:$PORT
+    autoDeploy: true
