--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,3 @@
-authkeyunregisterederror
-channelparticipantadmin
-channelparticipantcreator
-events
-getparticipantrequest
-hashlib
-html
-list
-phonecodeinvaliderror
-phonenumberinvaliderror
-requests
-sessionpasswordneedederror
-stringsession
-telegramclient
-typing
-استيراد
-الانتظار
-الوقت
-تم
-في
-للتحكم
-مكتبة
+Flask==2.3.3
+Telethon==1.33.1
+requests==2.31.0
